write words considered for the vector to output files